--- a/css/style.css
+++ b/css/style.css
@@ -835,7 +835,7 @@ a:focus {
 .footer_section form input {
   border: none;
   padding: 10px;
-  background-color: #4d618c;
+  background-color: #f0d43a;
   width: 100%;
   height: 45px;
   color: #ffffff;
