--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: "Poppins", sans-serif;
   color: #0c0c0c;
-  background-color: #ffffff;
+  background-color: #c7cccf;
   overflow-x: hidden;
 }
 
