--- a/css/style.scss
+++ b/css/style.scss
@@ -34,7 +34,7 @@ $textCol: #1f1f1f;
 body {
   @include main-font;
   color: #0c0c0c;
-  background-color: #c7cccf;
+  background-color: #F5DEB3;
   overflow-x: hidden;
 }
 
