--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,7 @@ a:focus {
 }
 
 .user_option-box a:hover {
-  color: #fd6326;
+  color: #9acd32;
 }
 
 /*end header section*/
@@ -291,7 +291,7 @@ a:focus {
   padding: 45px 0;
   background-color: #f0d43a;
   border-radius: 0 0 0 250px;
-  background: #fd6326;
+  background: #9acd32;
 }
 
 .slider_section .row {
@@ -421,7 +421,7 @@ a:focus {
 }
 
 .shop_section .box .detail-box h6 span {
-  color: #fd6326;
+  color: #9acd32;
   font-weight: 600;
 }
 
@@ -472,7 +472,7 @@ a:focus {
 }
 
 .about_section {
-  background-color: #fd6326;
+  background-color: #9acd32;
   color: #ffffff;
 }
 
@@ -577,7 +577,7 @@ a:focus {
 }
 
 .feature_section .box:hover {
-  background-color: #fd6326;
+  background-color: #9acd32;
   color: #ffffff;
 }
 
@@ -696,7 +696,7 @@ a:focus {
           align-items: center;
   margin: 45px 0;
   text-align: center;
-  background-color: #fd6326;
+  background-color: #9acd32;
   color: #ffffff;
   border-radius: 15px;
   padding: 25px;
@@ -763,7 +763,7 @@ a:focus {
 }
 
 .footer_section {
-  background-color: #fd6326;
+  background-color: #9acd32;
   color: #ffffff;
   padding-top: 60px;
 }
@@ -818,7 +818,7 @@ a:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: #fd6326;
+  color: #9acd32;
   width: 30px;
   height: 30px;
   border-radius: 100%;
