--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
 $white: #ffffff;
 $black: #000000;
 $primary1: #f0d43a;
-$primary2: #fd6326;
+$primary2: #9acd32;
 $textCol: #1f1f1f;
 
 // import fonts
